--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@loopback/rest": "^12.0.10",
     "@loopback/rest-explorer": "^5.0.10",
     "@loopback/service-proxy": "^5.0.10",
+    "@sendgrid/mail": "^7.7.0",
     "loopback-connector-mysql": "^5.4.4",
     "tslib": "^2.0.0"
   },
