--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@loopback/rest-explorer": "^5.0.10",
     "@loopback/service-proxy": "^5.0.10",
     "@sendgrid/mail": "^7.7.0",
+    "aws-sdk": "^2.1381.0",
     "dotenv": "^16.0.3",
     "loopback-connector-mysql": "^5.4.4",
     "tslib": "^2.0.0"
